--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.jsx",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "webpack-dev-server",
     "build": "webpack --mode production"
   },
@@ -12,17 +14,19 @@
     "url": "git+https://github.com/mgarciat1090/mgarciat1090.github.io.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Martin Garcia",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/mgarciat1090/mgarciat1090.github.io/issues"
   },
-  "homepage": "https://github.com/mgarciat1090/mgarciat1090.github.io#readme",
+  "homepage": "https://mgarciat1090.github.io",
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
+    "gh-pages": "^4.0.0",
+    "html-webpack-plugin": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "webpack": "^5.73.0",
